2008-09-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_vcard.erl (process_sm_iq): Fix a bug where a badmatch
	exception was raised when the user didn't have a vCard.
	(remove_user): Fix a bug where the exmpp_jid module was use instead of
	exmpp_stringprep.

	* src/ejabberd_auth_odbc.erl (check_password): Fix a typo in the
	exmpp_stringprep module name.

2008-09-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_vcard.erl (get_sm_features): Remove unappropriate
	comments.
	(do_route): Use the '_s' variants of NS_* macros instead of a call to
	atom_to_list/1.
	(filter_fields): A call to the stringprep module was left.

	* src/mod_vcard_ldap.erl, src/mod_vcard_odbc.erl: Convert to exmpp.

2008-09-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster_odbc.erl: Convert to exmpp.

	* src/mod_roster.erl (get_in_pending_subscriptions): Fix a bug where
	the type of the presence stanza was lost.
	(user_roster): Reorganize a few lines to match mod_roster_odbc.

2008-09-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1457 to r1563).

2008-09-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix explanation of mod_muc's anonymous
	option. Make clear that an ejabberd_service can only serve a
	single external component. Provide Mnesia directory when setting
	clustering (thanks to Matthew Reilly)

2008-09-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.hrl: Provide Host, Port, Headers and
	Transfer Protocol in request (thanks to Eric Cestari)(EJAB-560)
	* src/web/ejabberd_http.erl: Likewise

2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-09-02  Mickael Remond  <mremond@process-one.net>

	* src/odbc/mssql2000.sql: Script for MSSQL 2000
	* src/odbc/mssql2005.sql: Script for MSSQL 2005 (EJAB-535)
	* src/odbc/mssql.sql: removed

2008-08-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
